crates/lang/macro/tests/ui/contract/fail/trait-message-selector-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/trait-message-selector-mismatch.rs:25:9
   |
25 |         fn message(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^ expected `1_u32`, found `2_u32`
   |
   = note: expected struct `TraitMessageSelector<1_u32>`
              found struct `TraitMessageSelector<2_u32>`
